--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -12,7 +12,7 @@ description = "Simple Risk Measurement is written to help you measure complicate
 ## Open Graph
 images = ["doks.png"]
 ogLocale = "en_US"
-domainTLD = "doks.netlify.app"
+domainTLD = "magoo.github.io/simple-risk"
 titleHome = "Simple Risk Measurement"
 
 ## Twitter Cards
