Revert "debugging gh-pages"
This reverts commit bd1603e8f095e867f193f5f6b4a99bdc84609e72.

--- a/config/_default/config.toml
+++ b/config/_default/config.toml
@@ -1,4 +1,4 @@
-baseurl = "https://magoo.github.io/simple-risk-config-toml"
+baseurl = "https://magoo.github.io/simple-risk/"
 canonifyURLs = false
 disableAliases = true
 disableHugoGeneratorInject = true
