--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -69,7 +69,7 @@ alertText = "Introducing the Doks child theme, several DX + UX updates, and more
 # repoHost [Github | Gitea | GitLab] is used for building the edit link based on git hoster
 repoHost = "GitHub"
 #repoHost = "Gitea"
-docsRepo = "https://github.com/magoo/simple-risk-params"
+docsRepo = "https://github.com/magoo/simple-risk"
 docsRepoBranch = "master"
 editPage = false
 
