--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -2,41 +2,41 @@
   name = "Examples"
   weight = 9
   identifier = "examples"
-  url = "/docs/examples/"
+  url = "docs/examples/"
 
 [[docs]]
   name = "Introduction"
   weight = 10
   identifier = "intro"
-  url = "/docs/intro/"
+  url = "docs/intro/"
 
 [[docs]]
   name = "Estimation"
   weight = 12
   identifier = "estimation"
-  url = "/docs/estimation/"
+  url = "docs/estimation/"
 
 [[docs]]
   name = "Enterprise"
   weight = 13
   identifier = "enterprise"
-  url = "/docs/enterprise/"
+  url = "docs/enterprise/"
 
 [[docs]]
   name = "Other"
   weight = 15
   identifier = "other"
-  url = "/docs/other/"
+  url = "docs/other/"
 
 [[main]]
   name = "Docs"
-  url = "/docs/intro/purpose"
+  url = "docs/intro/purpose"
   weight = 10
 
 
 [[main]]
   name = "Blog"
-  url = "/blog/"
+  url = "blog/"
   weight = 20
 
 [[social]]
