--- a/config/_default/menus/menus.en.toml
+++ b/config/_default/menus/menus.en.toml
@@ -30,14 +30,15 @@
 
 [[main]]
   name = "Docs"
-  url = "docs/intro/purpose"
+  url = "docs/intro/introduction"
+  weight = 10
+
+[[main]]
+  name = "Forecasts"
+  url = "forecasts/previous"
   weight = 10
 
 
-[[main]]
-  name = "Blog"
-  url = "blog/"
-  weight = 20
 
 [[social]]
   name = "GitHub"
